--- a/src/config.ini
+++ b/src/config.ini
@@ -2,13 +2,15 @@
 ProjectDir = E:\cclink\AndroidTest
 
 [Dimens-All]
-sw320dp-v13 = 0.89 0.89
-sw360dp-v13 = 1 1
-sw480dp-v13 = 1.33 1.20
-sw600dp-v13 = 1.67 1.50
-sw720dp-v13 = 2.00 1.75
-large = 1.33 1.20
-xlarge = 2.00 1.75
+sw320dp-v13 = 0.89 0.89 0.89
+sw360dp-v13 = 1 1 1
+sw480dp-v13 = 1.33 1.20 1.20
+sw600dp-v13 = 1.67 1.50 1.50
+sw720dp-v13 = 2.00 1.75 1.75
+small = 1 1 0.5
+normal = 1 1 0.5
+large = 1.33 1.20 1.20
+xlarge = 2.00 1.75 1.75
 
 [Dimens-General]
 
